sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: not found: value change
      change=true
      ^AlgCocktailSort1:20: error: not found: value change
      change=true
      ^